2018-04-25:
- Now works with Python 3 instead of Python 2.
- Uses openpyxl instead of pyExcelerator, and generates .xlsx files instead of
  old-format .xls files.
- Code cleanup and other minor changes.
2016-05-16:
- Bug fix.
2015-04-19:
- Further code cleanup.
- Bug fixes.
2014-11-11:
- Code cleanup and miscellaneous changes. 
- License changed to the MIT license.
2014-08-14:
- Minor bug fixes and changes.
2014-05-14:
- View file dialog is now properly destroyed when closed.
- PyExcelerator is again included in the Window binaries.
2014-01-27:
- Fixed a bug that caused a failure to execute when using the latest version
  of wxPython. 
2012-08-07:
- Fixed a bug that caused an empty randomli list to be created when the input
  file contained no random points, thereby causing an exception when the program
  tried to use the list. 
2011-10-17:
- Fixed a bug that caused the number of holes to always be shown as 0 in the
  log (the holes were correctly accounted for in the output data though).
- Fixed a bug that prevented certain options that should be reset between runs
  from actually being so.
2010-09-02:
- Fixed a bug that prevented some options from being loaded from the
  configuration file.
2010-09-01:
- Revised and cleaned up some of the code classes.py; for example, some Point
  methods are now properties.
2010-08-19:
- In the Point.__psdAssociation method, dist was calculated using perpendDist()
  instead of perpendDistClosedPath(), which now seems like a bug (testing
  confirmed that). I changed it to use the latter method instead.
2010-08-17:
- Because also random points and other particle-like points are instances of the
  Particle class, this class was for clarity renamed Point. At the same time the
  import method of the geometry module was changed, so that objects in this
  module (including the geometry.Point class) are accessed using geometry.*.
- Fixed a bug where simulated-particle and particle-simulated interpoint